# eWeLink-API

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
ewelink/: __init__.py  client.py  constants.py  customtypes.py  exceptions.py  http.py  main.py  models.py  state.py  utils.py  ws.py  zeroconf.py
ewelink/classes/: change_state_zeroconf.py  device_power_usage_raw.py  websocket_base.py  zeroconf.py
ewelink/data/: constants.py  errors.py
ewelink/helpers/: device_control.py  ewelink.py  utilities.py
ewelink/mixins/: __init__.py  get_region.py  methods.py
ewelink/models/: __init__.py  asset.py  device.py  enumerations.py  object.py  user.py
ewelink/parsers/: parse_firmware_updates.py  parse_power_usage.py
ewelink/payloads/: credentials_payload.py  device_status.py  wss_login_payload.py  wss_update_payload.py  zeroconf_update_payload.py
test/: test_class_instantiation.py  test_device_control.py  test_env_node.py  test_env_serverless.py  test_firmware.py  test_helpers.py  test_invalid_credentials.py  test_power_usage.py  test_temperature_humidity.py  test_user.py  test_valid_credentials.py  test_zeroconf.py
test/_setup/: expectations.py  python_test_utils.py
test/_setup/config/: credentials_example.py
tests/: test_device.py  test_ewelnink.py  test_login.py  test_payloads.py
