[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling>=1.25" ]

[project]
name = "ewelink-api"
version = "0.1.0"
description = "eWeLink API for Python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pre-commit>=4.5.1",
]

[tool.hatch.build.targets.wheel]
packages = [ "ewelink" ]

[tool.uv]
default-groups = [  ]

[tool.ruff]
target-version = "py312"

# Same as Black
line-length = 88
lint.select = [
  "ARG",  # Unused arguments
  "B",    # flake8-bugbear
  "C",    # flake8-comprehensions
  "D401", # First line of docstring should be in imperative mood
  "E",    # pycodestyle errors
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "I",    # isort
  "N",    # Naming conventions
  "PERF", # perflint
  "PL",   # pylint
  "PTH",  # pathlib usage
  "RUF",  # ruff
  "S",    # flake8-bandit (security)
  "SIM",  # flake8-simplify
  "UP",   # PyUpgrade
  "W",    # pycodestyle warnings
]

lint.ignore = [
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "E501",    # line too long, handled by black
  "PLR2004", # Magic value used in comparison, consider replacing # with a constant variable
]
lint.unfixable = [
  "F401", # Do not fix unused imports, it's annoying during development
]
lint.pydocstyle.convention = "google"

[tool.mypy]
# Ensure full coverage
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
